References added to MF1.3 & MF4

--- a/Referencias/predoc.bib
+++ b/Referencias/predoc.bib
@@ -297,3 +297,280 @@
     URL = {https://acousticgeometry.com/types-of-sound-diffusers/},
     addendum = {[Accessed: 2024-06-06]}
 }
+@online{electron_website,
+    author = {Electron},
+    title = {Electron | Build cross-platform desktop apps with JavaScript, HTML, and CSS},
+    url = {https://www.electronjs.org},
+    urldate = {2024-06-11}
+}
+
+@online{react_website,
+    author = {React},
+    year = {2024},
+    title = {React – A JavaScript library for building user interfaces},
+    url = {https://reactjs.org},
+    urldate = {2024-06-11}
+}
+
+@online{redux_website,
+    author = {Redux},
+    year = {2024},
+    title = {Redux – A Predictable State Container for JS Apps},
+    url = {https://redux.js.org},
+    urldate = {2024-06-11}
+}
+
+@online{styled_components_website,
+    author = {Styled Components},
+    year = {2024},
+    title = {Styled Components – Visual primitives for the component age},
+    url = {https://styled-components.com},
+    urldate = {2024-06-11}
+}
+
+@online{d3js_website,
+    author = {D3.js},
+    year = {2024},
+    title = {D3.js – Data-Driven Documents},
+    url = {https://d3js.org},
+    urldate = {2024-06-11}
+}
+
+@online{neumorphism,
+    author = {Justinmind},
+    year = {2024},
+    title = {Neumorphism: why it’s all the hype in UI design},
+    url = {https//www.justinmind.com/ui-design/neumorphism},
+    urldate = {2024-06-11}
+}
+
+@techreport{W3CWeb,
+    author = {Ian Jacobs and Norman Walsh},
+    title = {Architecture of the World Wide Web, Volume One},
+    institution = {World Wide Web Consortium (W3C)},
+    year = {2004},
+    type = {W3C Recommendation},
+    url = {https://www.w3.org/TR/webarch/}
+}
+
+@article{HCI,
+    author = {Myers, Brad A.},
+    title = {Challenges of HCI design and implementation},
+    journal = {interactions},
+    year = {1995},
+    volume = {2},
+    number = {1},
+    pages = {73-83},
+    publisher = {ACM}
+}
+
+@article{WeavingWeb,
+    author = {Berners-Lee, Tim and Fischetti, Mark},
+    title = {Weaving the Web: The Original Design and Ultimate Destiny of the World Wide Web},
+    journal = {MIT Press},
+    year = {1989},
+    volume = {1},
+    number = {1},
+    pages = {23-45},
+    publisher = {MIT Press}
+}
+
+@book{JavaScriptBook,
+    author = {David Flanagan},
+    title = {JavaScript: The Definitive Guide},
+    year = {2020},
+    publisher = {O'Reilly Media}
+}
+
+@online{mqtt,
+    author = {MQTT},
+    year = {2024},
+    title = {MQTT: The Standard for IoT Messaging},
+    url = {https://mqtt.org/},
+    urldate = {2024-06-11}
+}
+
+@online{coap,
+    author = {CoAP},
+    year = {2024},
+    title = {Constrained Application Protocol (CoAP)},
+    url = {https://coap.space/},
+    urldate = {2024-06-11}
+}
+
+@online{websockets,
+    author = {WebSockets},
+    year = {2024},
+    title = {The WebSockets API},
+    url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API},
+    urldate = {2024-06-11}
+}
+
+@online{grpc,
+    author = {gRPC},
+    year = {2024},
+    title = {A high performance, open source universal RPC framework},
+    url = {https://grpc.io/},
+    urldate = {2024-06-11}
+}
+
+@online{http,
+    author = {Mozilla Developer Network},
+    year = {2024},
+    title = {An Overview of HTTP},
+    url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview},
+    urldate = {2024-06-11}
+}
+
+@article{AnoteOnIoT,
+    author = {Fazio, Maria and Ranjan, Rajiv and Girolami, Michele and Taheri, Javid and Dustdar, Schahram and Villari, Massimo},
+    title = {A Note on the Convergence of IoT, Edge, and Cloud Computing in Smart Cities},
+    journal = {IEEE},
+    year = {2018},
+    volume = {5},
+    number = {5},
+    pages = {22-24},
+    publisher = {IEEE},
+}
+
+@article{IoTandCloudConvergence,
+    author = {Rahim, Abdur and Giaffreda, Raffaele},
+    title = {IoT and cloud convergence: Opportunities and challenges},
+    journal = {IEEE},
+    year = {2014},
+    volume = {1},
+    publisher = {IEEE},
+}
+
+@online{gcp,
+    author = {Google Cloud},
+    year = {2024},
+    title = {Google Cloud Platform},
+    url = {https://cloud.google.com/},
+    urldate = {2024-06-11}
+}
+
+@online{aws,
+    author = {Amazon Web Services},
+    year = {2024},
+    title = {Amazon Web Services (AWS)},
+    url = {https://aws.amazon.com/},
+    urldate = {2024-06-11}
+}
+
+@online{azure,
+    author = {Microsoft Azure},
+    year = {2024},
+    title = {Microsoft Azure},
+    url = {https://azure.microsoft.com/},
+    urldate = {2024-06-11}
+}
+
+@online{ibmcloud,
+    author = {IBM Cloud},
+    year = {2024},
+    title = {IBM Cloud},
+    url = {https://www.ibm.com/cloud},
+    urldate = {2024-06-11}
+}
+
+@online{oraclecloud,
+    author = {Oracle Cloud},
+    year = {2024},
+    title = {Oracle Cloud},
+    url = {https://www.oracle.com/cloud/},
+    urldate = {2024-06-11}
+}
+
+@online{digitalocean,
+    author = {DigitalOcean},
+    year = {2024},
+    title = {DigitalOcean – The developer cloud},
+    url = {https://www.digitalocean.com/},
+    urldate = {2024-06-11}
+}
+
+@online{comparecloud,
+    author = {CompareCloud},
+    year = {2024},
+    title = {Compare Cloud Services},
+    url = {https://comparecloud.in/},
+    urldate = {2024-06-11}
+}
+
+@article{SQLvsNoSQL,
+    author = {Capris, Ticiana and Melo, Pedro and Pires, Ivan Miguel and Garcia, Nuno},
+    title = {Comparison of SQL and NoSQL databases with different workloads: MongoDB vs MySQL evaluation},
+    journal = {ICDABI},
+    year = {2023}
+}
+
+@online{bigtable,
+    author = {Google Cloud},
+    year = {2024},
+    title = {Cloud Bigtable},
+    url = {https://cloud.google.com/bigtable},
+    urldate = {2024-06-11}
+}
+
+@online{firestore,
+    author = {Google Cloud},
+    year = {2024},
+    title = {Cloud Firestore},
+    url = {https://cloud.google.com/firestore},
+    urldate = {2024-06-11}
+}
+
+@online{memorystore,
+    author = {Google Cloud},
+    year = {2024},
+    title = {Cloud Memorystore},
+    url = {https://cloud.google.com/memorystore},
+    urldate = {2024-06-11}
+}
+
+@online{mongodb,
+    author = {MongoDB},
+    year = {2024},
+    title = {MongoDB},
+    url = {https://www.mongodb.com/},
+    urldate = {2024-06-11}
+}
+
+@article{backendDev,
+    author = {Vishesh, Siddesh},
+    title = {Back-End Web-Application Development and the Role of an Admin},
+    journal = {IJARCCE},
+    year = {2017},
+}
+@online{django,
+    author = {Django},
+    year = {2024},
+    title = {Django: The web framework for perfectionists with deadlines},
+    url = {https://www.djangoproject.com/},
+    urldate = {2024-06-11}
+}
+
+@online{flask,
+    author = {Pallets Projects},
+    year = {2024},
+    title = {Flask: The Python micro framework for building web applications},
+    url = {https://flask.palletsprojects.com/},
+    urldate = {2024-06-11}
+}
+
+@online{fastapi,
+    author = {FastAPI},
+    year = {2024},
+    title = {FastAPI: A modern, fast (high-performance), web framework for building APIs with Python 3.6+},
+    url = {https://fastapi.tiangolo.com/},
+    urldate = {2024-06-11}
+}
+
+@online{springboot,
+    author = {Spring},
+    year = {2024},
+    title = {Spring Boot: Makes it easy to create stand-alone, production-grade Spring based Applications},
+    url = {https://spring.io/projects/spring-boot},
+    urldate = {2024-06-11}
+}
