--- a/Secciones/Media 2/ModulosDetallados/MF4.tex
+++ b/Secciones/Media 2/ModulosDetallados/MF4.tex
@@ -2,7 +2,7 @@
 
 La interfaz de usuario de nuestra aplicación cuenta con un estilo de diseño neumorfista, respondiendo a las tendencias de diseño actuales, lo que genera una seguridad de uso 
 para una aplicación moderna de carácter profesional, con una estética atractiva, consistencia visual, pero sobre todo interactividad y enfoque en el funcionamiento, permitiendo 
-a los usuarios interactuar con el sistema de manera eficiente. A continuación, se describe el flujo de trabajo de la interfaz de usuario \ref{fig:diagrama_flujo}. \\
+a los usuarios interactuar con el sistema de manera eficiente \cite{neumorphism}. A continuación, se describe el flujo de trabajo de la interfaz de usuario \ref{fig:diagrama_flujo}. \\
 
 \begin{figure}[!htb]
     \centering
@@ -89,11 +89,11 @@ Finalmente podemos observar las imágenes en la Figura \ref{fig:vistas_interfaz}
 \end{figure}
 \FloatBarrier
 
-Para el desarrollo ya de una manera técnica, hemos seleccionado tecnologías que nos permiten crear una aplicación robusta, eficiente y de fácil mantenimiento. La tecnología principal que utilizaremos es Electron, complementada con otras herramientas y marcos de trabajo. \\
+Para el desarrollo ya de una manera técnica, hemos seleccionado tecnologías que nos permiten crear una aplicación robusta, eficiente y de fácil mantenimiento \cite{WeavingWeb}. La tecnología principal que utilizaremos es Electron, complementada con otras herramientas y marcos de trabajo. \\
 
 \textbf{Electron}
 \begin{itemize}[label={}, leftmargin=0pt]
-    \item \textbf{Descripción:} Electron es un marco de trabajo para construir aplicaciones de escritorio utilizando tecnologías web HTML, CSS y JavaScript. Permite crear aplicaciones multiplataforma que pueden ejecutarse en Windows, macOS y Linux desde una única base de código.
+    \item \textbf{Descripción:} Electron es un marco de trabajo para construir aplicaciones de escritorio utilizando tecnologías web HTML, CSS y JavaScript. Permite crear aplicaciones multiplataforma que pueden ejecutarse en Windows, macOS y Linux desde una única base de código \cite{electron_website}.
     \item \textbf{Justificación:}
 \end{itemize}
 
@@ -109,7 +109,7 @@ Comunidad y Soporte & Electron cuenta con una amplia comunidad de desarrolladore
 
 \textbf{React}
 \begin{itemize}[label={}, leftmargin=0pt]
-    \item \textbf{Descripción:} React es una biblioteca de JavaScript para construir interfaces de usuario. Permite crear componentes reutilizables que gestionan su propio estado, lo que facilita el desarrollo de aplicaciones dinámicas y responsivas.
+    \item \textbf{Descripción:} React es una biblioteca de JavaScript para construir interfaces de usuario. Permite crear componentes reutilizables que gestionan su propio estado, lo que facilita el desarrollo de aplicaciones dinámicas y responsivas \cite{react_website}.
     \item \textbf{Justificación:}
 \end{itemize}
 
@@ -125,7 +125,7 @@ Aprendizaje y Uso & React es relativamente fácil de aprender y usar, con una si
 
 \textbf{Redux}
 \begin{itemize}[label={}, leftmargin=0pt]
-    \item \textbf{Descripción:} Redux es una biblioteca de JavaScript para gestionar el estado de la aplicación de manera predecible. Comúnmente acompañada de React.
+    \item \textbf{Descripción:} Redux es una biblioteca de JavaScript para gestionar el estado de la aplicación de manera predecible. Comúnmente acompañada de React \cite{redux_website}.
     \item \textbf{Justificación:}
 \end{itemize}
 
@@ -140,7 +140,7 @@ Ecosistema & Redux tiene un amplio ecosistema de herramientas y middleware que f
 
 \textbf{Styled Components}
 \begin{itemize}[label={}, leftmargin=0pt]
-    \item \textbf{Descripción:} Styled Components es una biblioteca de JavaScript que permite escribir estilos CSS dentro del código JavaScript utilizando una técnica llamada CSS-in-JS.
+    \item \textbf{Descripción:} Styled Components es una biblioteca de JavaScript que permite escribir estilos CSS dentro del código JavaScript utilizando una técnica llamada CSS-in-JS \cite{styled_components_website}.
     \item \textbf{Justificación:}
 \end{itemize}
 
@@ -155,7 +155,7 @@ Integración & Styled Components se integra perfectamente con React, permitiendo
 
 \textbf{D3.js}
 \begin{itemize}[label={}, leftmargin=0pt]
-    \item \textbf{Descripción:} D3.js es una biblioteca de JavaScript para la visualización de datos que permite manipular documentos basados en datos.
+    \item \textbf{Descripción:} D3.js es una biblioteca de JavaScript para la visualización de datos que permite manipular documentos basados en datos \cite{d3js_website}.
     \item \textbf{Justificación:}
 \end{itemize}
 
@@ -168,5 +168,5 @@ Comunidad y Recursos & D3.js cuenta con una amplia comunidad y una gran cantidad
 \caption{Selección de herramienta de visualización: D3.js}
 \end{longtable}
 
-La combinación de Electron con React, Redux, Styled Components y D3.js funciona en sinergia de la siguiente manera: Electron para desarrollar la aplicación multiplataforma, React y Redux facilitan la construcción de la interfaz de usuario dinámica y gestionada de manera eficiente. Styled Components asegura que nuestros estilos sean modulares y mantenibles, y por ultimo D3.js nos permite ofrecer visualizaciones de datos ricas e interactivas.
-Esta selección de tecnologías está cuidadosamente diseñada para satisfacer las necesidades de nuestro proyecto, garantizando tanto la experiencia de desarrollo, como el resultado para el usuario. \\
+La combinación de Electron con React, Redux, Styled Components y D3.js funciona en sinergia de la siguiente manera: Electron para desarrollar la aplicación multiplataforma, React y Redux facilitan la construcción de la interfaz de usuario dinámica y gestionada de manera eficiente. Styled Components asegura que nuestros estilos sean modulares y mantenibles, y por ultimo D3.js nos permite ofrecer visualizaciones de datos ricas e interactivas \cite{W3CWeb}.
+Esta selección de tecnologías está cuidadosamente diseñada para satisfacer las necesidades de nuestro proyecto, garantizando tanto la experiencia de desarrollo, como el resultado para el usuario \cite{HCI}. \\
