--- a/Secciones/Media 2/DiseñoConceptual.tex
+++ b/Secciones/Media 2/DiseñoConceptual.tex
@@ -366,54 +366,54 @@ Función principal: Hacer un acondicionamiento acústico a un cuarto en función
 Se procedió a validar la relación entre los requerimientos y las funciones, para lo cual se elaboró la matriz de trazabilidad presentada en la Tabla “Matriz de trazabilidad requerimientos-funciones”.
 
 %-------------Matriz de trazabilidad requerimientos-funciones--------------------
-\definecolor{gr}{gray}{.5}
+\definecolor{gr}{gray}{.8}
 \begin{center}
 \footnotesize
     \begin{longtable}[!htb]{| m{2em} || m{2em} | m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}| m{2em}|}
     \hline
     &F1.1 &F1.2 &F1.3 &F2.1 &F2.2 &F2.3 &F3.1 &F3.2 &F3.3 &F3.4 &F4.1 &F4.2 &F4.3\\
     \hline\hline
-    R1 & & \cellcolor{gr}{}&\cellcolor{gr}{} &\cellcolor{gr}{} & \cellcolor{gr}{}&\cellcolor{gr}{}&\cellcolor{gr}{} & & & & & & \\
+    R1 & & \cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & \cellcolor{gr}x&\cellcolor{gr}x&\cellcolor{gr}x & & & & & & \\
     \hline
-    R2 &\cellcolor{gr}{} &\cellcolor{gr}{} & & &\cellcolor{gr}{} & & & & & & & &\\
+    R2 &\cellcolor{gr}x &\cellcolor{gr}x & & &\cellcolor{gr}x & & & & & & & &\\
     \hline
-    R3 &\cellcolor{gr}{} & \cellcolor{gr}{}& & &\cellcolor{gr}{} & & & & & & & &\\
+    R3 &\cellcolor{gr}x & \cellcolor{gr}x& & &\cellcolor{gr}x & & & & & & & &\\
     \hline
-    R4 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R4 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R5 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R5 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R6 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R6 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R7 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R7 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R8 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R8 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R9 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R9 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R10 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R10 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R11 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & \cellcolor{gr}{}& & & & & & &\\
+    R11 & & & &\cellcolor{gr}x &\cellcolor{gr}x & \cellcolor{gr}x& & & & & & &\\
     \hline
-    R12 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & & & &\\
+    R12 & & & &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & & & &\\
     \hline
-    R13 &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R13 &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
-    R14 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & & & &\\
+    R14 & & & &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & & & &\\
     \hline
-    R15 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & & & &\\
+    R15 & & & &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & & & &\\
     \hline
-    R16 & & & & & & & & & & & \cellcolor{gr}{}& \cellcolor{gr}{}&\cellcolor{gr}{}\\
+    R16 & & & & & & & & & & & \cellcolor{gr}x& \cellcolor{gr}x&\cellcolor{gr}x\\
     \hline
-    R17 & & & & & & & & & & & \cellcolor{gr}{}& \cellcolor{gr}{}&\cellcolor{gr}{}\\
+    R17 & & & & & & & & & & & \cellcolor{gr}x& \cellcolor{gr}x&\cellcolor{gr}x\\
     \hline
-    R18 & & & & & & &\cellcolor{gr}{} & & &\cellcolor{gr}{} & & &\\
+    R18 & & & & & & &\cellcolor{gr}x & & &\cellcolor{gr}x & & &\\
     \hline
-    R19 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & & & &\\
+    R19 & & & &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & & & &\\
     \hline
-    R20 & & & &\cellcolor{gr}{} &\cellcolor{gr}{} &\cellcolor{gr}{} & & & & & & &\\
+    R20 & & & &\cellcolor{gr}x &\cellcolor{gr}x &\cellcolor{gr}x & & & & & & &\\
     \hline
-    R21 & & & & & & & &\cellcolor{gr}{} &\cellcolor{gr}{} & & & &\\
+    R21 & & & & & & & &\cellcolor{gr}x &\cellcolor{gr}x & & & &\\
     \hline
 
     \caption{\footnotesize Matriz de trazabilidad requerimientos-funciones.}
@@ -428,20 +428,20 @@ Para dar forma a la parte física del proyecto se definen los módulos que dará
 \begin{enumerate}
     \item[{MF}1] Módulo de procesamiento: Es un módulo cuya función principal es el procesamiento de las ondas de sonido, el cálculo de las posiciones de los paneles y el procesamiento de los comandos ingresados por el usuario. El módulo se define en submódulos, donde el submódulo \textbf{MF}$_{1.1}$ es el encargado de procesar la respuesta del estudio y realizar los cálculos de los parámetros acústicos y los modos normales de vibración. En el submódulo \textbf{MF}$_{1.2}$ se generan los cálculos de las posiciones deseadas de los paneles, así como el procesamiento de la estrategia de control para el movimiento de los mismos, contemplando la medición y el cálculo del error de posición, para que la localización de los paneles sea fiable. El submódulo \textbf{MF}$_{1.3}$ se encarga de procesar todas las instrucciones de acondicionamiento ingresadas por el usuario, así como de todos los parámetros acústicos que se despliegan en la interfaz de muestreo.
 
-    \item Módulo de generación y medición de la acústica: Tiene la función de generar las ondas que excitan el estudio (\textbf{MF}$_{2.1}$) y medir la interacción de las ondas con el recinto (\textbf{MF}$_{2.2}$). El submódulo de la generación de las ondas de sonido funciona a partir de un algoritmo que genera una señal se excitación que es transmitida al estudio mediante una bocina, las ondas que son transmitidas se encargan de describir las características del estudio. Así, las señales que interactúan con el estudio posteriormente son recibidas por el submódulo de medición que consta de un micrófono que capta todas las señales que han interactuado con el recinto.
+    \item[{MF}2] Módulo de generación y medición de la acústica: Tiene la función de generar las ondas que excitan el estudio (\textbf{MF}$_{2.1}$) y medir la interacción de las ondas con el recinto (\textbf{MF}$_{2.2}$). El submódulo de la generación de las ondas de sonido funciona a partir de un algoritmo que genera una señal se excitación que es transmitida al estudio mediante una bocina, las ondas que son transmitidas se encargan de describir las características del estudio. Así, las señales que interactúan con el estudio posteriormente son recibidas por el submódulo de medición que consta de un micrófono que capta todas las señales que han interactuado con el recinto.
 
-    \item Módulo modificador de la acústica: Este módulo tiene la función de generar el movimiento de los paneles acústicos considerando la compensación para disminuir los modos normales de vibración (\textbf{MF}$_{3.1}$). El movimiento se lleva a cabo mediante un mecanismo que permite su colocación en un punto donde se requiere modificar la superficie que entra en contacto con las ondas sonoras, este mecanismo es capaz de sensar el error de posición con el propósito de que el lugar en el que el módulo requiere la localización del panel sea específicamente la solicitada. 
+    \item[{MF}3] Módulo modificador de la acústica: Este módulo tiene la función de generar el movimiento de los paneles acústicos considerando la compensación para disminuir los modos normales de vibración (\textbf{MF}$_{3.1}$). El movimiento se lleva a cabo mediante un mecanismo que permite su colocación en un punto donde se requiere modificar la superficie que entra en contacto con las ondas sonoras, este mecanismo es capaz de sensar el error de posición con el propósito de que el lugar en el que el módulo requiere la localización del panel sea específicamente la solicitada. 
 
-    \item Módulo interfaz de usuario: Además de gestionar el encendido y apagado del sistema, el submódulo de interacción directa (\textbf{MF}$_{4.1}$) se encarga de recibir las instrucciones por parte del usuario para el acondicionamiento del estudio, es decir, la selección del instrumento. Al seleccionar el instrumento la consola muestra a través del submódulo de muestreo de datos (\textbf{MF}$_{4.2}$) la acústica ideal para dicho instrumento y posteriormente de que el módulo dos realiza el acondicionamiento se muestran los nuevos valores de las variables acústicas. De igual forma la interfaz muestra las variables acústicas antes de realizar el proceso de acondicionamiento y las frecuencias de vibración que son un problema para el sistema.
+    \item[{MF}4] Módulo interfaz de usuario: Además de gestionar el encendido y apagado del sistema, el submódulo de interacción directa (\textbf{MF}$_{4.1}$) se encarga de recibir las instrucciones por parte del usuario para el acondicionamiento del estudio, es decir, la selección del instrumento. Al seleccionar el instrumento la consola muestra a través del submódulo de muestreo de datos (\textbf{MF}$_{4.2}$) la acústica ideal para dicho instrumento y posteriormente de que el módulo dos realiza el acondicionamiento se muestran los nuevos valores de las variables acústicas. De igual forma la interfaz muestra las variables acústicas antes de realizar el proceso de acondicionamiento y las frecuencias de vibración que son un problema para el sistema.
 
-    \item Módulo gestor de energía: Se encarga de gestionar el suministro eléctrico requerido por cada uno de los módulos y submódulos. El submódulo de conversión y regulación de la tensión de entrada (\textbf{MF}$_{5.1}$) convierte y regula la señal de corriente alterna que es suministrada al sistema dependiendo de las características de alimentación de cada uno de los componentes del sistema. El módulo es capaz de gestionar el consumo energético del sistema y sus componentes, además de disminuir proporcionalmente la potencia en contra del consumo, lográndolo a través del submódulo de medición del consumo energético (\textbf{MF}$_{5.2}$), es decir, la medición de la tensión de entrada y la corriente que demanda el sistema.
+    \item[{MF}5] Módulo gestor de energía: Se encarga de gestionar el suministro eléctrico requerido por cada uno de los módulos y submódulos. El submódulo de conversión y regulación de la tensión de entrada (\textbf{MF}$_{5.1}$) convierte y regula la señal de corriente alterna que es suministrada al sistema dependiendo de las características de alimentación de cada uno de los componentes del sistema. El módulo es capaz de gestionar el consumo energético del sistema y sus componentes, además de disminuir proporcionalmente la potencia en contra del consumo, lográndolo a través del submódulo de medición del consumo energético (\textbf{MF}$_{5.2}$), es decir, la medición de la tensión de entrada y la corriente que demanda el sistema.
 \end{enumerate}
 
 De igual manera se realizó la validación de los módulos y submódulos acorde a las funciones planteadas para el sistema, haciendo uso de la matriz de trazabilidad que se muestra a continuación.
 
 
 %----------------------Matriz de trazabilidad--------------------------
-\definecolor{gr}{gray}{.5}
+\definecolor{gr}{gray}{.8}
 \begin{center}
 \footnotesize
     \begin{longtable}[!htb]{| m{3em} || m{3em} | m{3em}| m{3em}| m{3em}| m{3em}| m{3em}| m{3em}| m{3em}| m{3em}| m{3em}|}
@@ -450,34 +450,33 @@ De igual manera se realizó la validación de los módulos y submódulos acorde 
     \cline{2-11}
     & \textbf{MF}$_{1.1}$ & \textbf{MF}$_{1.2}$ & \textbf{MF}$_{1.3}$ & \textbf{MF}$_{2.1}$ & \textbf{MF}$_{2.2}$ & \textbf{MF}$_{3.1}$ & \textbf{MF}$_{4.1}$ & \textbf{MF}$_{4.2}$ & \textbf{MF}$_{5.1}$ & \textbf{MF}$_{5.2}$ \\
     \hline\hline
-    
-    \textbf{F}$_{1.1}$ & & & & \cellcolor{gr}{} & & & & & & \\
+    \textbf{F}$_{1.1}$ & & & & \cellcolor{gr}x & & & & & & \\
     \hline
-    \textbf{F}$_{1.2}$ & & & & & \cellcolor{gr}{} & & & & & \\
+    \textbf{F}$_{1.2}$ & & & & & \cellcolor{gr}x & & & & & \\
     \hline
-    \textbf{F}$_{1.3}$ & \cellcolor{gr}{}& & & & & & & & & \\
+    \textbf{F}$_{1.3}$ & \cellcolor{gr}x& & & & & & & & & \\
     \hline
-    \textbf{F}$_{2.1}$ & & \cellcolor{gr}{}& & & & & & & & \\
+    \textbf{F}$_{2.1}$ & & \cellcolor{gr}x& & & & & & & & \\
     \hline
-    \textbf{F}$_{2.2}$ & & \cellcolor{gr}{}& & & & \cellcolor{gr}{} & & & & \\
+    \textbf{F}$_{2.2}$ & & \cellcolor{gr}x& & & & \cellcolor{gr}x & & & & \\
     \hline
-    \textbf{F}$_{2.3}$ & & & & & & \cellcolor{gr}{} & & & & \\
+    \textbf{F}$_{2.3}$ & & & & & & \cellcolor{gr}x & & & & \\
     \hline
-    \textbf{F}$_{3.1}$ & & & \cellcolor{gr}{} & & & & \cellcolor{gr}{} & & & \\
+    \textbf{F}$_{3.1}$ & & & \cellcolor{gr}x & & & & \cellcolor{gr}x & & & \\
     \hline
-    \textbf{F}$_{3.2}$ & & & \cellcolor{gr}{} & & & & & \cellcolor{gr}{} & & \\
+    \textbf{F}$_{3.2}$ & & & \cellcolor{gr}x & & & & & \cellcolor{gr}x & & \\
     \hline
-    \textbf{F}$_{3.3}$ & & & \cellcolor{gr}{} & & & & & \cellcolor{gr}{} & & \\
+    \textbf{F}$_{3.3}$ & & & \cellcolor{gr}x & & & & & \cellcolor{gr}x & & \\
     \hline
-    \textbf{F}$_{3.4}$ & & & & & & & \cellcolor{gr}{} & & & \\
+    \textbf{F}$_{3.4}$ & & & & & & & \cellcolor{gr}x & & & \\
     \hline
-    \textbf{F}$_{4.1}$ & & & & & & & & & \cellcolor{gr}{} & \\
+    \textbf{F}$_{4.1}$ & & & & & & & & & \cellcolor{gr}x & \\
     \hline
-    \textbf{F}$_{4.2}$ & & & & & & & & & & \cellcolor{gr}{} \\
+    \textbf{F}$_{4.2}$ & & & & & & & & & & \cellcolor{gr}x \\
     \hline
-    \textbf{F}$_{4.3}$ & & & & & & & & & & \cellcolor{gr}{} \\
+    \textbf{F}$_{4.3}$ & & & & & & & & & & \cellcolor{gr}x \\
     \hline
-    
+
     \caption{\footnotesize Matriz de trazabilidad de arquitectura física}
     \label{tab:MatTrazArquiFis}
     \end{longtable}
